--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,8 @@ openai
 gradio
 webrtcvad
 live2d-py==0.5.0 # Windows only
-mss # Linux only
+# If Linux, uncomment following
+# mss
 PyQt5
 librosa
 # If you are not a developer, you can skip the following packages
