--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ openai
 gradio
 webrtcvad
 live2d-py==0.5.0 # Windows only
+pynput  # devices/keyboard.py
 # If Linux, uncomment following
 # mss
 PyQt5
